[package]
name = "server"
version = "0.1.0"
authors = ["Paul Weaver <paul@concertdaw.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1.0"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
websocket = {version = "0.26", features = ["async"] }
