[package]
name = "server"
version = "0.1.0"
authors = ["Paul Weaver <paul@concertdaw.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
enum_primitive = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
nom = "6.1"
rust-crypto = "0.2"
simple_logger = "1.11"
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.14"
